# sparknova

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.mts
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: 70-DPiHw.js  BThvQsNZ.js  BfH4tdX4.js  CfwBsxvx.js  DCy56RVY.js  DOFZFML0.js  DTWOZuC0.js  DwE8ATd1.js  t86O4GUj.js
.svelte-kit/output/client/_app/immutable/entry/: app.CjWL8MbV.js  start.BGUap110.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.Bv1JOUw8.js  1.dnxBOUsl.js  2.CRH9Fg74.js
.svelte-kit/output/server/: index.js  manifest-full.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.BHKbMiZg.css  _page.CmJvqCZt.css
.svelte-kit/output/server/chunks/: context.js  index.js  internal.js  shared.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
.trae/documents/: 将Svelte项目迁移到SvelteKit.md  清理Svelte传统项目残留文件和代码.md
docs/: SSH配置优化说明.md  SparkNova_utools配置建议.md  Tauri窗口配置完整指南.md  dependency-management.md  配置优化完成报告.md
docs/superpowers/plans/: 2026-05-19-slint-to-tauri2-migration.md
scripts/: README.md  install-dependencies.ps1
src/: App.vue  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  paths.rs  shortcuts.rs  tray.rs  window.rs
src-tauri/src/commands/: activate.rs  config.rs  mod.rs  notes.rs  search.rs
src-tauri/src/domain/: app_entry.rs  mod.rs  note.rs
src-tauri/src/indexer/: app_scanner.rs  directory_scanner.rs  mod.rs  registry_scanner.rs
src-tauri/src/search/: engine.rs  matcher.rs  mod.rs  pinyin.rs  ranker.rs
src-tauri/src/storage/: frequency.rs  index_cache.rs  mod.rs  note_store.rs  sqlite_db.rs
src/components/: SearchInput.svelte  SearchInput.vue
src/composables/: useWindowControl.ts
src/lib/: SearchInput.svelte  main.ts  utils.ts
src/lib/components/: NoteEditor.svelte  NoteList.svelte  ResultList.svelte  SettingsForm.svelte
src/lib/stores/: search.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/launcher/: +page.svelte
src/routes/notes/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: search.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: time.ts
