[package]
name = "sparknova"
version = "0.1.0"
description = "SparkNova: A lightweight, cross-platform plugin launcher inspired by uTools. Built with Tauri 2.0 for speed and Supabase for cloud sync."
authors = ["SparkNova Team <sparknova@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sparknova"
keywords = ["launcher", "utools", "tauri", "plugins", "productivity"]
categories = ["gui", "os::miscellaneous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sparknova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.8", features = ["unstable"] }
tauri-plugin-global-shortcut = "2.0.0-beta.8"
tauri-plugin-opener = "2.0.0-beta.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
