[package]
name = "sparknova"
version = "0.1.0"
description = "SparkNova: A lightweight, cross-platform plugin launcher inspired by uTools. Built with Tauri 2.0 for speed and Supabase for cloud sync."
authors = ["SparkNova Team <sparknova@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sparknova"
keywords = ["launcher", "utools", "tauri", "plugins", "productivity"]
categories = ["gui", "os::miscellaneous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sparknova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["unstable"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

# Recommended database dependencies
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration management
config = "0.14"
toml = "0.8"

# Tauri plugins (matching current version)
tauri-plugin-fs = "2.4.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.4.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Supabase support
supabase-rust = "0.1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
