[package]
name = "sparknova"
version = "0.1.0"
description = "SparkNova: A lightweight, cross-platform plugin launcher inspired by uTools. Built with Tauri 2.0 for speed and Supabase for cloud sync."
authors = ["SparkNova Team <sparknova@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sparknova"
keywords = ["launcher", "utools", "tauri", "plugins", "productivity"]
categories = ["gui", "os::miscellaneous"]

[lib]
name = "sparknova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["unstable"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "sync"] }

# Database dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
redb = "2"

# Tauri plugins (matching current version)
tauri-plugin-fs = "2.4.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.4.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Windows integration
lnk = "0.6"
winreg = "0.52"

# Text processing
pinyin = "0.10"

# Desktop integration
rfd = "0.15"
arboard = "3"